Put index.html in root folder

--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
 <html>
 <head>
 	<title>Globe Media</title>
-	<link rel="stylesheet" href="../stylesheets/navigation/main.css">
+	<link rel="stylesheet" href="./stylesheets/navigation/main.css">
 </head>
 <body>
 
 
 <nav>
-	<div class="logo"><img src="../images/logo/globe-logo.png"></div>
+	<div class="logo"><img src="./images/logo/globe-logo.png"></div>
 	<ul>
 		<li>
 			<figure>
-				<img src="../images/navIcons/news.svg">
+				<img src="./images/navIcons/news.svg">
 				<figcaption>NEWS</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
-				<img src="../images/navIcons/projects.svg">
+				<img src="./images/navIcons/projects.svg">
 				<figcaption>PROJECTS</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
-				<img src="../images/navIcons/about.svg">
+				<img src="./images/navIcons/about.svg">
 				<figcaption>ABOUT US</figcaption>
 			</figure>
 		</li>
 		<li>
 			<figure>
-				<img src="../images/navIcons/contact.svg">
+				<img src="./images/navIcons/contact.svg">
 				<figcaption>CONTACT</figcaption>
 			</figure>
 		</li>
