--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset='utf-8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Globe Media</title>
 	<link rel="stylesheet" href="./stylesheets/navigation/main.css">
+
 </head>
 <body>
 
