Add a:active imgs to navIcons and stylized <a>

--- a/index.html
+++ b/index.html
@@ -14,28 +14,36 @@
 	<div class="logo"><img src="./images/logo/globe-logo.png"></div>
 	<ul id="nav_ul">
 		<li class="current_page_item"> <!-- id='current_page_item' ide na onaj <li> koji pokazuje na svoju stranicu -->
-			<figure>
-				<img src="./images/navIcons/news.svg" alt="news" width="30" height="30">
-				<figcaption>NEWS</figcaption>
-			</figure>
+			<a href="#">
+				<figure>
+					<img src="./images/navIcons/news.svg" onmousedown="this='./images/navIcons/newsAcitve.svg'"alt="news" width="30" height="30">
+					<figcaption>NEWS</figcaption>
+				</figure>
+			</a>
 		</li>
 		<li>
-			<figure>
-				<img src="./images/navIcons/projects.svg" alt="project" width="30" height="30">
-				<figcaption>PROJECTS</figcaption>
-			</figure>
+			<a href="#">
+				<figure>
+					<img src="./images/navIcons/projects.svg" alt="project" width="30" height="30">
+					<figcaption>PROJECTS</figcaption>
+				</figure>
+			</a>
 		</li>
 		<li>
-			<figure>
-				<img src="./images/navIcons/about.svg" alt="about" width="30" height="30">
-				<figcaption>ABOUT US</figcaption>
-			</figure>
+			<a href="#">
+				<figure>
+					<img src="./images/navIcons/about.svg" alt="about" width="30" height="30">
+					<figcaption>ABOUT US</figcaption>
+				</figure>
+			</a>
 		</li>
 		<li>
-			<figure>
-				<img src="./images/navIcons/contact.svg" alt="contact" width="30" height="30">
-				<figcaption>CONTACT</figcaption>
-			</figure>
+			<a href="#">
+				<figure>
+					<img src="./images/navIcons/contact.svg" alt="contact" width="30" height="30">
+					<figcaption>CONTACT</figcaption>
+				</figure>
+			</a>
 		</li>
 	</ul>
 	
