Change nav icon color on hover and on click (smaller screens)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li class="current_page_item"> <!-- id='current_page_item' ide na onaj <li> koji pokazuje na svoju stranicu -->
 			<a href="#">
 				<figure>
-					<img src="./images/navIcons/news.svg" alt="news" width="30" height="30">
+					<img src="./images/navIcons/newsActive.svg" alt="news" width="30" height="30">
 					<figcaption>NEWS</figcaption>
 				</figure>
 			</a>
