Modify css file with class and id

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<nav>
+<nav class="navigation">
 	<div class="logo"><img src="./images/logo/globe-logo.png"></div>
 	<ul id="nav_ul">
 		<li class="current_page_item"> <!-- id='current_page_item' ide na onaj <li> koji pokazuje na svoju stranicu -->
